--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Test1"
         tools:targetApi="31">
         <activity
+            android:name=".Hello2Activity"
+            android:exported="false" />
+        <activity
             android:name=".HelloActivity"
             android:exported="false" />
         <activity
